Updates from Overleaf

--- a/0abstract.tex
+++ b/0abstract.tex
@@ -1,6 +1,6 @@
 \begin{abstract}
-\noindent\textbf{Introduction}: The increase of size and complexity of simulation studies in systems biology and systems medicine proposes new challenges to sharing reproducible results. The \ac{combine} improves the coordination of standard formats for several features of simulation studies \cite{combine}. On the other side, GitHub has been used as an essential common platform for managing software projects and supporting collaborative development \cite{github}.\\
-\textbf{Methods}: \\
-\textbf{Results}: \\
-\textbf{Conclusions}: \\
+\noindent\textbf{Introduction}: The increase of size and complexity of simulation studies in systems biology and systems medicine proposes new challenges to sharing reproducible results. The \ac{combine} improves the coordination of standard formats for several features of simulation studies \cite{combine}. On the other side, GitHub has been used as an essential common platform for managing software projects and supporting collaborative development \cite{github}. In this case study we aimed to develop a fully-featured  \ac{combine} archive of the Bachmann signaling model \cite{bachmannmodel} using agile co-working technologies.\\
+\textbf{Methods}: In this case study we implemented a GitHub environment to create a publicly traceable progress documentation of a \ac{combine} archive assembly. Systematic searches for available modeling files (\ac{sbml}) and software tools were conducted. The interaction between the tools and the modeling data was assessed and a fitting combination was chosen. Additionally we created the graphical notation files (\ac{sbgnml} and \ac{sbgn}), that are needed to visualize the simulation results.Finally we reproduced the simulation data in a Tellurium \cite{tellurium} script  and assembled a \ac{combine} archive that is publicly available.\\
+\textbf{Results}: A powerful working environment could be created in the GitHub repository. Content versioning, code deposition and development as well as a wiki documentation delivered a prompt and sound scaffold for the development of the \ac{combine} archive. By systematic searches we identified the \textsc{bachmann2011.xml} (BIOMD0000000861) as the appropriate model file and were able to add the needed \ac{sbgnml} and \ac{sbgn} code. To fuse the above simulation components a Tellurium \cite{tellurium} script was developed to reproduce the numeric and graphical results of the original paper. The comprehensive information that was acquired by then was assembled within a \ac{combine} archive and is now able to reproduce merely all simulation results.\\
+\textbf{Conclusions}: In this case study we could demonstrate the value of agile co-working and the possibility of a low-threshold approach for the development of a fully-featured combine archive of the Bachmann model. Although we we could not reproduce the full extend of the simulations given in the original work due to missing details in the publication we were able to create a fully functional archive that improves the reproducibility and availability of the original research results. \\
 \end{abstract}
