--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
 \noindent\small \textbf{Authors' contribution:} The authors contributed equally to this work. \\ 
 \noindent\small \textbf{Competing interests:} The authors declare no competing interests.\\
 \noindent\small \textbf{Funding:} None.\\
-\noindent\small \textbf{Acknowledgments:}...
+\noindent\small \textbf{Acknowledgments:} The authors thank Dagmar Walthemath \orcidlink{0000-0002-5886-5563} and Martin Boeker \orcidlink{0000-0003-2972-2042} for mentoring the genesis of this work.
 
 \input{5abbreviation}
 
