--- a/4conclusions.tex
+++ b/4conclusions.tex
@@ -2,7 +2,7 @@
 
 In summary, in this case study we were able to reproduce a systems biology simulation model by Bachmann \textit{et al.} \cite{bachmannmodel} and add the necessary annotation to create a fully-featured \ac{combine} archive. This sprint collaboration was conducted in an agile environment using GuitHub that appeared to be a easy to use environment for team members of different experience to that tool. A fully publicly traceable documentation of the development and a reproducible simulation archive could be achieved in the context of a collaboratory educational sprint.
 
-\subsection*{Relation to existing evidence}
+%\subsection*{Relation to existing evidence}
 
 \subsection*{Limitations}
 Several parameters required to reproduce the full extend of individual plots were not included in the original data itself and therefor could not be reproduced.  Given sthe sprint character of this collaboration we were not able to to added the missing data manually based on details provided in the supplementary material. 
