--- a/6appendices.tex
+++ b/6appendices.tex
@@ -2,7 +2,7 @@
 
 \subsection*{GitHub Repository} \label{git}
 
-Our public GitHub repository is available here: \url{https://github.com/ahodelin/Bachmann_Archive}.
+Our public GitHub repository is available here: \url{https://github.com/ahodelin/Bachmann_Archive} \cite{AbelHodelinHernandez.2021}.
 This repository is a collaborative effort of participants of the module "Bioinformatik und Systembiologie" in the Master Program \ac{bids}, organized by the Graduate School Rhein-Neckar in cooperation with the \ac{miracum}, a consortium of the \ac{mii}.
 
 \subsection*{COMBINE Archive}
