Reference to COMBINE_Bachmann was changed (some author added)

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -230,24 +230,21 @@
 }
 
 @misc{AbelHodelinHernandez.2021,
- abstract = {This is the first release!!! v1.01.10.2021
-
-version 1.: version's number
-
-01.10.2021: date of the version in format dd.mm.yyyy. In this case October 1rst 2021
-
-This public repository is a collaborative effort of participants of the module {\textquotedbl}Bioinformatik und Systembiologie{\textquotedbl} in the Master Program {\textquotedbl}Biomedical Informatics and Data Science{\textquotedbl} (BIDS), organized by the Graduate School Rhein-Neckar in cooperation with MIRACUM, a consortium of the Medical Informatics Initiative.
-
-Our goal is to provide the Bachmann Model as a fully-featured COMBINE archive, a standardized container for data files related to biological simulation studies described by Scharm {\&} Waltemath (https://doi.org/10.12688/f1000research.9379.1)},
- author = {{Abel Hodelin Hernandez} and {Leonard Knegendorf} and {Jessica Vasseur} and {Marisa Kaup} and {Oliver H{\"o}lsken} and {Andrea Bucher} and {Felix Patricius Hans} and {Tania L{\"u}ty}},
- year = {2021},
- title = {ahodelin/Bachmann{\_}Archive: COMBINE{\_}Bachmann},
- publisher = {Zenodo},
- doi = {10.5281/ZENODO.5543359}
+  author       = {Abel Hodel\'in Hern\'andez and
+                  Leonard Knegendorf and
+                  Jessica Vasseur and
+                  Marisa Kaup and
+                  Oliver H\"olsken and
+                  Felix Patricius Hans and
+                  Tania L\"uty and
+                  Felix Sch\"onecker and
+                  Andreas Bucher and
+                  Dagmar Waltemath},
+  title        = {ahodelin/Bachmann\_Archive: COMBINE\_Bachmann},
+  %month        = oct,
+  year         = 2021,
+  publisher    = {Zenodo},
+  %version      = {v1.01.10.2021},
+  doi          = {10.5281/zenodo.5543360},
+  %url          = {https://doi.org/10.5281/zenodo.5543360}
 }
-
-
-
-
-
-
