--- a/5abbreviation.tex
+++ b/5abbreviation.tex
@@ -9,6 +9,8 @@
        
         \acro{combine}[COMBINE]{Computational Modeling in Biology Network}
         
+        \acro{MIASE}[MIASE]{Minimum Information About a Simulation Experiment}
+        
         \acro{copasi}[COPASI]{COmplex PAthway SImulator}
         
         \acro{csv}[CSV]{comma-separated values}
