--- a/00titlepage.tex
+++ b/00titlepage.tex
@@ -2,18 +2,18 @@
 
 
 \begin{centering}
-\includegraphics[scale=0.5, width=6cm]{figures/unnamed1}
+%\includegraphics[scale=0.5, width=6cm]{figures/unnamed1}
 \vspace{1cm}
 
-{\noindent\huge{COMBACH:\\ A case study to enhance the reproducibility of a dynamic JAK/STAT5 pathway model by creating a fully-featured COMBINE archive }}
+{\noindent\huge{COMBACH: A case study to enhance the reproducibility of a dynamic JAK/STAT5 pathway model by creating a fully-featured COMBINE archive }}
 
 \end{centering}
 
 
 \vspace{2cm}
-\noindent\textbf{Oliver H\"olsken$^{1,4,5}$~\orcidlink{0000-0001-6086-9275}, Felix Patricius Hans$^{2,4}$~\orcidlink{0000-0002-7164-7624}, Sami Habib$^{3,4}$~\orcidlink{0000-0003-4087-2869}, Abel Hodelin Hernandez$^{3,4}$~\orcidlink{0000-0002-4295-9899}}
+\noindent\textbf{Oliver H\"olsken$^{1,4,5}$~\orcidlink{0000-0001-6086-9275}, Felix Patricius Hans$^{2,4}$~\orcidlink{0000-0002-7164-7624}, Sami Habib$^{3,4}$~\orcidlink{0000-0003-4087-2869}, Abel Hodel\'in Hern\'andez$^{3,4}$~\orcidlink{0000-0002-4295-9899}}
 \\ \\
-	\small $^{1}$Charité – Universit\"atsmedizin Berlin, corporate member of Freie Universit\"at Berlin and HumboldtUniversit\"at zu Berlin, Laboratory of Innate Immunity, Department of Microbiology, Infectious Diseases and Immunology, Berlin, Germany \\
+	\small $^{1}$Charit\'e – Universit\"atsmedizin Berlin, corporate member of Freie Universit\"at Berlin and HumboldtUniversit\"at zu Berlin, Laboratory of Innate Immunity, Department of Microbiology, Infectious Diseases and Immunology, Berlin, Germany \\
 	\small $^{2}$Medical Center - University of Freiburg, University Emergency Department, Freiburg, Germany \\
 	\small $^{3}$University Medical Center of the Johannes Gutenberg University Mainz, Mainz, Germany \\
 	\small $^{4}$Master Program - \ac{bids}, Graduate School Rhein-Neckar in collaboration with the \ac{miracum}, Germany \\
@@ -24,9 +24,9 @@
 \newpage
 \hrule
 \input{0abstract}
- \hspace{10pt}
 
-\noindent\keywords{FAIR, Systems Biology, Computational Biology, Data Science, Medical Informatics, Usability, mathematical modeling, negative feedback, \ac{socs}, \acs{combine}}
 
+\noindent\keywords{FAIR, Systems Biology, Computational Biology, Medical Informatics, Usability, mathematical modeling, negative feedback, \ac{socs}, \acs{combine}}
+\hspace{10pt}
 \hrule
 \end{titlepage}
