- Minimal changes - neue abbrebiations

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -9,19 +9,19 @@ One of these tools are so called \ac{combine} archives, which aim to improve the
 \subsubsection*{Dyamic Pathway Simulations}
 Dynamic pathway modeling is needed to describe the complex regulatory system of feedback regulators, to answer this question, Bachmann \textit{et al.} built a dual negative feedback model of JAK2/STAT5 signaling in primary erythroid progenitor cells isolated from mouse fetal livers \cite{bachmannmodel}.
 
-Given the background of the only partially reproducible dynamic pathway model of \ac{socs} family members in JAK2/STAT5 signaling from Bachmann \textit{et al.} \cite{bachmannmodel}, we  were asked to  to create a fully featured archive and reproduce the simulation content both for educational purposes and for scientific completion of the original work. Furthermore, the created COMBINE Archive could serve as a template to enhance reproducibility of future modelling studies.
+Given the background of the only partially reproducible dynamic pathway model of \ac{socs} family members in JAK2/STAT5 signaling from Bachmann \textit{et al.} \cite{bachmannmodel}, we were asked to create a fully featured \ac{combine} archive and reproduce the simulation content, both for educational purposes and for scientific completion of the original work. Furthermore, the created \ac{combine} Archive could serve as a template to enhance reproducibility of future modelling studies.
 
 \subsubsection*{Agile working}
-Agile working has been a major drive for the evolution of working environment especially in information technologies. New definitions on how, where, with whom and when collaboration and the completion of tasks is done are enabled by digital cloud solutions and co-working platforms that integrate the allocation of tasks, versioning of content and the \textit{ad-hoc}-formation of teams. GitHub as a provider of internet-hosted software development and version control tools has been used as an essential common platform for managing software projects and supporting collaborative development. Lately some educational projects have begun to adopt it for hosting and managing course content to enhance transparency features in the creation, reuse, and remix of materials \cite{github, Knegendorf.}. In the development of this COMBINE archive we dedicated ourselves to the \acs{fair}-principles and therefore built a completely publicly traceable working environment in GitHub, that can be accessed via the link given in the appendices.
+Agile working has been a major drive for the evolution of working environment especially in information technologies. New definitions on how, where, with whom and when collaboration and the completion of tasks is done are enabled by digital cloud solutions and co-working platforms that integrate the allocation of tasks, versioning of content and the \textit{ad-hoc}-formation of teams. GitHub as a provider of internet-hosted software development and version control tools has been used as an essential common platform for managing software projects and supporting collaborative development. Lately some educational projects have begun to adopt it for hosting and managing course content to enhance transparency features in the creation, reuse, and remix of materials \cite{github, Knegendorf.}. In the development of this \ac{combine} archive we dedicated ourselves to the \acs{fair}-principles and therefore built a completely publicly traceable working environment in GitHub, that can be accessed via the link given in the appendices.
 
 \subsection*{Objectives}
-Since the number of modeling studies providing both data and meta-data in form of a \ac{combine} archives are limited, the main objective of this case study was to create a fully featured \acs{combine}-archive including both scripts to reproduce all simulation figures and easy to access simulation data of the Bachmann model, a dynamic pathway model of JAK/STAT5 signaling \cite{bachmannmodel}. Furthermore, we aimed to create an easy to use guideline on how to compile a \acs{combine} archive out of an existing simulation model. Besides these aims we were also interested in validating all generated scripts after archive compilation. Finally, we aimed to evaluate the used tools in terms of usability, accessibility and asked if the provided data from the original study was sufficient to reproduce the presented results.
+Since the number of modeling studies providing both data and meta-data in form of a \ac{combine} archives are limited, the main objective of this case study was to create a fully featured \acs{combine}-archive including both scripts to reproduce all simulation figures and easy to access simulation data of the Bachmann model, a dynamic pathway model of \ac{jak}/\ac{stat}5 signaling \cite{bachmannmodel}. Furthermore, we aimed to create an easy to use guideline on how to compile a \acs{combine} archive out of an existing simulation model. Besides these aims we were also interested in validating all generated scripts after archive compilation. Finally, we aimed to evaluate the used tools in terms of usability, accessibility and asked if the provided data from the original study was sufficient to reproduce the presented results.
 
 \subsection*{Study design}
 This case study describes the implementation process of a \ac{combine} archive using agile co-working and publicly available documentation.
 \subsubsection*{Research questions}
 The research question was whether there is a comprehensive way of developing a \ac{combine} archive out of publicly available data sources that allow the public to reproduce all simulation data including the resulting graphs. As secondary question we tested if this task could be performed, documented and archived in an agile working environment and according to the \acs{fair}-principles.
 \subsubsection*{Analysis procedures}
-To analyze the function of the \ac{combine}-archive we run several own simulations during the development process and compared the results with existing data from the original publication and with existing graphs ibidem.
+To analyze the function of the \ac{combine}-archive we run several own simulations during the development process and compared the results with existing data from the original publication and with existing graphs \textit{ibidem}.
 \subsubsection*{Validity procedures}
 To validate the results of our \ac{combine} archive we conducted a systematic search for available modeling data, tested the content on a metadata level and created \ac{sbgn}- and \ac{sedml}-files that were generated using various tools and that were challenged against the original data in numeric and graphic analyses.
