--- a/2methods.tex
+++ b/2methods.tex
@@ -27,21 +27,21 @@ One of the objectives of our project was to provide a standardized graphical rep
 To validate the \ac{sbgnml} we, imported it into several software and libraries including LibSBGN from Newt Editor, the open-source software \ac{vanted} \cite{vanted}, Krayon for \ac{sbgn} \cite{krayon}, and SBGNViz \cite{sbgnviz}. Lastly, we cleaned up the map and colored the relevant features in the model to improve the developed map.
 
 \subsection*{Supply of one or several simulation scripts}
-The simulation descriptions to reproduce selected experiments from Bachmann \textit{et al.} \cite{bachmannmodel} in combination with the selected model were provided as \hyperlink{https://sed-ml.org/}{SED-ML Level 1 Version 3 files}. SED-ML files were chosen because they fulfill
+The simulation descriptions to reproduce selected experiments from Bachmann \textit{et al.} \cite{bachmannmodel} in combination with the selected model were provided as \hyperlink{https://sed-ml.org/}{\acs{sedml} Level 1 Version 3 files}. \ac{sedml} files were chosen because they fulfill
 the recently published Minimum Information about a Simulation Experiment \ac{MIASE} guidelines (computer-readable exchange format, provision of XML schema).
 
 \subsubsection*{\acs{sedml}-Tools: Review and Selection of }
-An overview of existing tools to generate SED-ML files was obtained from the \hyperlink{http://sed-ml.org/}{SED-ML website}, including a brief description and information on supported model languages. Based on this overview as well as previous experience, we decided to test several different tools in order to create, edit and export SED-ML files for specific experiments using the selected SBML model. 
+An overview of existing tools to generate \ac{sedml} files was obtained from the \hyperlink{http://sed-ml.org/}{\acs{sedml} website}, including a brief description and information on supported model languages. Based on this overview as well as previous experience, we decided to test several different tools in order to create, edit and export \ac{sedml} files for specific experiments using the selected SBML model. 
 
 \subsubsection*{\acs{sedml}-Files: Generation and Validation}
-Initially, we followed the steps taken by Scharm \& Waltemath \cite{combine} to generate a default simulation using \hyperlink{http://sysbioapps.spdns.org/SED-ML_Web_Tools}{SED-ML WebTools Version 2.4} and modified this for a specific experiment in \hyperlink{http://copasi.org/}{\ac{copasi}} v.4.33.246 \cite{copasi}. However, given the type of plots to be created, we eventually decided to generate experiment-speficifc SED-ML files with Tellurium v2.2.0 \cite{tellurium} in order to reproduce the experiments presented by Bachmann \textit{et al.} \cite{bachmannmodel}. Finally, the created SED-ML files were validated in SED-ML WebTools and integrated into the COMBINE archive.
+Initially, we followed the steps taken by Scharm \& Waltemath \cite{combine} to generate a default simulation using \hyperlink{http://sysbioapps.spdns.org/SED-ML_Web_Tools}{\acs{sedml} WebTools Version 2.4} and modified this for a specific experiment in \hyperlink{http://copasi.org/}{\ac{copasi}} v.4.33.246 \cite{copasi}. However, given the type of plots to be created, we eventually decided to generate experiment-speficifc \ac{sedml} files with Tellurium v2.2.0 \cite{tellurium} in order to reproduce the experiments presented by Bachmann \textit{et al.} \cite{bachmannmodel}. Finally, the created \ac{sedml} files were validated in \ac{sedml} WebTools and integrated into the \ac{combine} archive.
 
 \subsection*{Assembly of the \acs{combine} archive}
 
-The development of the \ac{combine} Archive was performed in accordance with a recently published guideline from Schwarm and Waltemath \cite{combine}.
+The development of the \ac{combine} Archive was performed in accordance with a recently published guideline from Schwarm \& Waltemath \cite{combine}.
 
-The final assembly of our fully-featured \ac{combine} archive of the Bachmann model was executed in the web platform \textit{CombineArchiveWeb}. We used the same structure as described by Bachmann \textit{et al.} (see 'setup of an agile working environment'), and extended the scaffold by additional sub-folders containing supplementary files. Thus we created a new empty archive with our credentials on the \textit{CombineArchiveWeb} with the name \textsf{::bachmann}. The metadata section of our \ac{combine} archive includes a brief description of the study and the contact data of the members.
+The final assembly of our fully-featured \ac{combine} archive of the Bachmann model was executed in the platform \ac{webcat}. We used the same structure as described by Schwarm \& Waltemath (see 'setup of an agile working environment'), and extended the scaffold by additional sub-folders containing supplementary files. Thus we created a new empty archive with our credentials on the \ac{webcat} with the name \textsf{::bachmann}. The metadata section of our \ac{combine} archive includes a brief description of the study and the contact data of the members.
 
-The folder 'documentation' includes the initial paper from Bachmann \textit{et al.}  with its additional materials, the paper from Scharm \& Waltemath, and the file 'SystemsBiology.bib' with the used literature in our project. 'model' contains files with the latest version of the Bachmann model from 2019 (see 'Model selection') and the sub-folder \textsf{sbgn}, it contains pictures, \ac{sbgnml} files, and other supplementary files to visualize the model. The folder 'experiment' provides Python-scripts, \ac{sedml} files, and other additional files to support the simulation. The results of the different simulations and validations are in the folder 'result'. This folder also contains the sub-folders 'Default', 'Fig(3-5)', 'SuppFig9', and 'SuppFig9\_COPASI' that incorporate \ac{csv} files with tables, PDF files with reports, and pictures of the performed simulations with different tools.  'result' contains a sub-folder 'validation'  including the additional folders 'Test\_ COPASI\_2021-06-28' and 'Test\_SWT\_2021-06-28' with data files of the performed validations from \ac{copasi} and \ac{swt}.
+The folder 'documentation' includes the initial paper from Bachmann \textit{et al.}  with its additional materials, the paper from Scharm \& Waltemath, and the file 'SystemsBiology.bib' with the used literature in our project. 'model' contains files with the latest version of the Bachmann model from 2019 (see 'Model selection') and the sub-folder 'sbgn', it contains pictures, \ac{sbgnml} files, and other supplementary files to visualize the model. The folder 'experiment' provides Python-scripts, \ac{sedml} files, and other additional files to support the simulation. The results of the different simulations and validations are in the folder 'result'. This folder also contains the sub-folders 'Default', 'Fig(3-5)', 'SuppFig9', and 'SuppFig9\_COPASI' that incorporate \ac{csv} files with tables, PDF files with reports, and pictures of the performed simulations with different tools.  'result' contains a sub-folder 'validation'  including the additional folders 'Test\_ COPASI\_2021-06-28' and 'Test\_SWT\_2021-06-28' with data files of the performed validations from \ac{copasi} and \ac{swt}.
 
 The Archive can be accesses via the link in the 'appendices'-section.
