--- a/5abbreviation.tex
+++ b/5abbreviation.tex
@@ -11,6 +11,10 @@
         
         \acro{MIASE}[MIASE]{Minimum Information About a Simulation Experiment}
         
+        \acro{cis}[CIS]{cytokine-induced SH2-domain containing protein}
+        
+        \acro{colab}[COLAB]{Google Colaboratory}
+        
         \acro{copasi}[COPASI]{COmplex PAthway SImulator}
         
         \acro{csv}[CSV]{comma-separated values}
@@ -20,6 +24,9 @@
         \acro{epo}[Epo]{Erythropoietin}
         
         \acro{fair}[FAIR]{Findable, Accessible, Interoperable, Reusable}
+        
+        \acro{jak}[JAK]{Janus kinase}
+        
         
         \acro{mii}[MII]{Medical Informatics Initiative}
         
@@ -39,8 +46,11 @@ Medicine}
         
         \acro{socs}[SOCS]{suppressor of cytokine}
         
-                \acro{swt}[SWT]{SED-ML\_Web\_Tools}
+        \acro{stat}[STAT]{signal transducer and activator of transcription protein}        
+                
+        \acro{swt}[SWT]{SED-ML\_Web\_Tools}
         
         \acro{vanted}[VANTED]{Visualisation and Analysis of Networks containing Experimental Data}
+        \acro{webcat}[WebCat]{CombineArchiveWeb application}
 
     \end{acronym}
